Fix search input width on mobile

--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -3,7 +3,7 @@
   grid-template-columns: 1fr 2fr 1fr;
   position: relative;
   @media only screen and (max-width: $bp-medium) {
-    grid-template-columns: 3fr 0 1fr;
+    grid-template-columns: 2fr 0 1fr;
     justify-content: center;
   }
 }
